cambio la ruta menu y elimino una réplica

--- a/topEducation/nginx/conf.d/topEducation.conf
+++ b/topEducation/nginx/conf.d/topEducation.conf
@@ -1,7 +1,7 @@
-upstream proyecto_docker {
+upstream topEducation {
     server top_education1:8090;
     server top_education2:8090;
-    server top_education3:8090;
+
 }
 
 server {
@@ -10,7 +10,7 @@ server {
     access_log off;
 
     location / {
-        proxy_pass http://tingeso1;
+        proxy_pass http://topEducation;
         proxy_set_header Host $host:$server_port;
         proxy_set_header X-Forwarded-Host $server_name;
         proxy_set_header X-Real-IP $remote_addr;
