--- a/topEducation/nginx/conf.d/topEducation.conf
+++ b/topEducation/nginx/conf.d/topEducation.conf
@@ -1,6 +1,6 @@
 upstream topEducation {
-    server top_education1:8090;
-    server top_education2:8090;
+    server topeducation1:8090;
+    server topeducation2:8090;
 
 }
 
