--- a/topEducation/docker-compose.yml
+++ b/topEducation/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     volumes:
       - ./nginx/conf.d:/etc/nginx/conf.d
     depends_on:
-      - app1
-      - app2
+      - topeducation1
+      - topeducation2
 
   mysql-db:
     image: mysql
@@ -23,8 +23,8 @@ services:
     ports:
       - 33060:3306
 
-  app1:
-    container_name: top_education1
+  topeducation1:
+    container_name: project-topeducation1
     image: aracelyu/tingeso1
     ports:
       - "8091:8090"
@@ -38,8 +38,8 @@ services:
     depends_on:
       - mysql-db
 
-  app2:
-    container_name: top_education2
+  topeducation2:
+    container_name: project-topeducation2
     image: aracelyu/tingeso1
     ports:
       - "8092:8090"
